public/css/main.css
.footer {
  position: fixed;
  background-color: #000000;
  /* background-color: #343a40; */
  bottom: 0px;
  left: 0px;
  right: 0px;
  margin-bottom: 0px;
  text-align: right;
  height: 55px;
}

#mainContainer {
  margin-top: 20px;
  margin-bottom: 75px;
}

.carousel-item {
  border: 1px solid black;
  border-radius: 5px;
  height: 600px;
}

.carousel-caption h5 {
  color: rgb(97, 47, 47);
  font-size: xxx-large;
}

.carousel-caption p {
  color: White;
  font-size: xx-large;
}

.img-thumbnail {
  width: 500px;
}

#sneakerBuyForm {
  margin-top: 180px;
}

#reviewContainer {
  margin-top: 10px;
  border: 1px solid black;
  border-radius: 5px;
  padding: 10px;
}

#QandAContainer {
  margin-top: 10px;
  border: 1px solid black;
  border-radius: 5px;
  padding: 10px;
}

.accordion-body {
  background-color: #d8d8d8;
}

.sneakerListImg {
  width: 350px !important;
}

.revReportBtn {
  border: 0.5px solid black;
  border-radius: 5px;
  float: right;
  background-color: #ffc107;
}

.revReportBtn a {
  padding: 5px;
  text-decoration: none;
  color: black;
}

.rrBtn label {
  color: blue;
}

.rrBtn button {
  color: black;
  background-color: #ffc107;
}

.qnaReportBtn {
  border: 0.5px solid black;
  border-radius: 5px;
  float: right;
  background-color: #ffc107;
}

.qnaReportBtn a {
  padding: 5px;
  text-decoration: none;
  color: black;
}

.rrFormError {
  margin-top: 10px;
}

.rqFormError {
  margin-top: 10px;
}

/* #searchFormError {
  float: right;
  margin-right: 180px;
} */

